# tree-sitter-haxe

./: .gitignore  .npmrc  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  test-examples.sh  tree-sitter.json
.github/workflows/: ci.yml
bindings/c/: tree-sitter-haxe.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/rust/: build.rs  lib.rs
examples/: basic.hx  binop.hx  complex_test.hx  conditional.hx  injections.hx  macros.hx  ternary.hx  unop.hx
queries/: folds.scm  highlights.scm  injections.scm  locals.scm  tags.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: array_comprehension.txt  binops.txt  bitwise.txt  cast.txt  coalescing.txt  comments.txt  comprehension.txt  conditional.txt  declarations.txt  expr_binops.txt  expr_cast.txt  expr_const.txt  expr_decl.txt  expr_field.txt  expr_for.txt  expr_function.txt  expr_if.txt  expr_metadata.txt  expr_switch.txt  expr_ternop.txt  expr_while.txt  expressions.txt  functions.txt  import.txt  literals.txt  macros.txt  metadata.txt  operators_binary.txt  operators_bitwise.txt  operators_coalescing.txt  operators_logical.txt  operators_ternay.txt  operators_unary.txt  package.txt  preprocessors.txt  property.txt  switch.txt  ternary.txt  type_decl.txt  unops.txt  (+1 more)
test/highlight/: abstract.hx  class.hx  constants.hx  expressions.hx  import.hx  macros.hx  package.hx
(+3 files in other folders)
